First draft of Spark RDD notebooks

--- a/notebooks/0001-python-in-x-minutes.ipynb
+++ b/notebooks/0001-python-in-x-minutes.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Learn Python in X minutes\n",
     "\n",
-    "The following content is retrieved and shorten from the website [Learning Python in x minute](https://learnxinyminutes.com/docs/python/). The content in the website can teach a programmer, who is familiar with other programming language, to understand Python quickly."
+    "The following content was retrieved and shorten from the website [Learning Python in x minute](https://learnxinyminutes.com/docs/python/)."
    ]
   },
   {
