--- a/notebooks/0202-spark-rdd-basic.ipynb
+++ b/notebooks/0202-spark-rdd-basic.ipynb
@@ -9,11 +9,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad7b7235",
+   "metadata": {},
+   "source": [
+    "## parallelize\n",
+    "`parallelize()` is a method to distribute local data to cluster"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3be86ba2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "rdd = spark.sparkContext.parallelize([1,2,3,4,5,6])"
    ]
@@ -23,15 +47,38 @@
    "id": "33eec117",
    "metadata": {},
    "source": [
-    "**count()** a simple method to count the number of data in a RDD"
+    "## count\n",
+    "`count()` a simple method to count the number of data in a RDD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b6193160",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RDD count :6"
+     ]
+    }
+   ],
    "source": [
     "print(\"RDD count :\" + str(rdd.count()))"
    ]
@@ -41,17 +88,42 @@
    "id": "7cd9d277",
    "metadata": {},
    "source": [
-    "**collect()** is a basic method (but used with a caution) to retreive all data from a RDD to the __Spark driver__"
+    "## collect\n",
+    "`collect()` is a basic method (but used with a caution) to retreive all data from a RDD to the __Spark driver__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "630904c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]"
+     ]
+    }
+   ],
    "source": [
-    "rddCollect = rdd.collect()"
+    "rddCollect = rdd.collect()\n",
+    "\n",
+    "rddCollect"
    ]
   },
   {
@@ -59,15 +131,37 @@
    "id": "a25d6cde",
    "metadata": {},
    "source": [
-    "More example about `collect()`"
+    "Another example about `collect()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9c46539d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Finance', 10), ('Marketing', 20), ('Sales', 30), ('IT', 40)]"
+     ]
+    }
+   ],
    "source": [
     "dept = [\n",
     "    (\"Finance\",10),\n",
@@ -77,11 +171,9 @@
     "]\n",
     "\n",
     "dept_rdd = spark.sparkContext.parallelize(dept)\n",
-    "print(dept_rdd)\n",
     "dataColl = dept_rdd.collect()\n",
     "\n",
-    "for row in dataColl:\n",
-    "    print(row[0] + \",\" +str(row[1]))"
+    "dataColl"
    ]
   },
   {
@@ -89,15 +181,38 @@
    "id": "a7bb1878",
    "metadata": {},
    "source": [
-    "**getNumPartition()** used to check how many partitions a RDD has"
+    "## getNumPartition\n",
+    "`getNumPartition()` used to check how many partitions a RDD has"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b71239cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Partitions: 2"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of Partitions: \"+ str(rdd.getNumPartitions()))"
    ]
@@ -107,7 +222,8 @@
    "id": "081f5b96",
    "metadata": {},
    "source": [
-    "**first()** used to fetch the first RDD, this is a randomized item in distributed dataset"
+    "## first\n",
+    "`first()` used to fetch the first RDD, this is a randomized item in distributed dataset"
    ]
   },
   {
@@ -125,16 +241,41 @@
    "id": "2113060b",
    "metadata": {},
    "source": [
-    "**take(n)** retrieve n items from RDD to **driver** (recommened to use, instead of `collect()`)"
+    "## take\n",
+    "`take(n)` retrieve n items from RDD to **driver** (recommened to use, instead of `collect()`)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5c3fbd51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All elements: [1, 2, 3, 4, 5, 6]\n",
+      "Take(3): 3 element: [1, 2, 3]"
+     ]
+    }
+   ],
    "source": [
+    "print(\"All elements: \" + repr(rdd.collect()))\n",
     "print(\"Take(3): 3 element: \" + repr(rdd.take(3)))"
    ]
   },
@@ -143,18 +284,44 @@
    "id": "5a9b86b2",
    "metadata": {},
    "source": [
-    "**empty RDD** can be created by `emptyRDD()` or `parallelize` with empty list"
+    "## emptyRDD\n",
+    "An _empty RDD_ can be created by `emptyRDD()` or `parallelize` with empty list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a391f982",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EmptyRDD[12] at emptyRDD at NativeMethodAccessorImpl.java:0\n",
+      "Size of empty RDD: 0\n",
+      "ParallelCollectionRDD[14] at readRDDFromFile at PythonRDD.scala:274"
+     ]
+    }
+   ],
    "source": [
     "rdd = spark.sparkContext.emptyRDD()\n",
     "print(rdd)\n",
+    "print(\"Size of empty RDD: \" + str(rdd.count()))\n",
     "\n",
     "rdd2 = spark.sparkContext.parallelize([])\n",
     "print(rdd2)"
