--- a/notebooks/0205-spark-rdd-word-count.ipynb
+++ b/notebooks/0205-spark-rdd-word-count.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "895d76a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7263ae63",
    "metadata": {},
@@ -13,7 +23,7 @@
    "id": "21b49a06",
    "metadata": {},
    "source": [
-    "## Create a RDD from distributed data file"
+    "## Create a RDD from a data collection file in distributed file system"
    ]
   },
   {
@@ -23,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rdd = spark.sparkContext.textFile(\"/apps/sparkbyexamples/src/pyspark-examples/data.txt\")\n",
+    "rdd = spark.sparkContext.textFile(\"s3a://datalake/examples/data.txt\")\n",
     "\n",
     "for element in rdd.collect():\n",
     "    print(element)"
@@ -55,7 +65,7 @@
    "id": "cc21a7ce",
    "metadata": {},
    "source": [
-    "# Map"
+    "## Map"
    ]
   },
   {
@@ -97,7 +107,7 @@
    "id": "c62c3d8f",
    "metadata": {},
    "source": [
-    "`map()` again to swap between word and count"
+    "`map()` again to swap between key and value and then use `sortByKey()` to arrange the rank by key (which is the number of a word)"
    ]
   },
   {
@@ -139,7 +149,15 @@
    "id": "932fbab2",
    "metadata": {},
    "source": [
-    "## Lazy Evaluation and Immutable"
+    "## Chaining Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99025345",
+   "metadata": {},
+   "source": [
+    "Using characteristics of RDD transform methods to return another RDD we can chain all methods together to retrieve the final result"
    ]
   },
   {
@@ -151,14 +169,17 @@
    "source": [
     "final_rdd = (\n",
     "    spark.sparkContext\n",
-    "        .textFile(\"/apps/sparkbyexamples/src/pyspark-examples/data.txt\")\n",
+    "        .textFile(\"s3a://datalake/examples/data.txt\")\n",
     "        .flatMap(lambda x: x.split(\" \"))\n",
     "        .map(lambda x: (x,1))\n",
     "        .reduceByKey(lambda a,b: a+b)\n",
     "        .map(lambda x: (x[1],x[0]))\n",
     "        .sortByKey()\n",
     "        .filter(lambda x : 'a' in x[1])\n",
-    ")"
+    ")\n",
+    "\n",
+    "for element in final_rdd.collect():\n",
+    "    print(element)"
    ]
   }
  ],
