--- a/notebooks/0301-spark-dataframe-intro.ipynb
+++ b/notebooks/0301-spark-dataframe-intro.ipynb
@@ -18,25 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "71d035fe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import functions as F\n",
     "from pyspark.sql import types as T"
@@ -388,50 +373,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b5a1acc0",
+   "execution_count": null,
+   "id": "afc8f974",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------------+----------+----------+\n",
-      "|city           |dates     |population|\n",
-      "+---------------+----------+----------+\n",
-      "|Caracas        |1991-02-25|37800000  |\n",
-      "|Ccs            |1998-05-10|19795791  |\n",
-      "|   São Paulo   |1993/03/15|12341418  |\n",
-      "|~Madrid        |1992/07/17|6489162   |\n",
-      "+---------------+----------+----------+"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "schema = T.StructType([\n",
     "    T.StructField(\"city\", T.StringType(), True),\n",
     "    T.StructField(\"dates\", T.StringType(), True),\n",
     "    T.StructField(\"population\", T.IntegerType(), True)]\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4bf93f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dates = [\"1991-02-25\",\"1998-05-10\", \"1993/03/15\", \"1992/07/17\"]\n",
     "cities = ['Caracas', 'Ccs', '   São Paulo   ', '~Madrid']\n",
     "population = [37800000, 19795791, 12341418, 6489162]\n",
     "\n",
+    "data = list(zip(cities, dates, population))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5a1acc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create data frame with schema\n",
     "df = spark.createDataFrame(list(zip(cities, dates, population)), schema=schema)\n",
     "\n",
@@ -448,25 +422,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "26064d4a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = [('Scott', 50), ('Jeff', 45), ('Thomas', 54), ('Ann', 34)]\n",
     "sparkDF = spark.createDataFrame(data, [\"name\", \"age\"])"
@@ -474,57 +433,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "41b2361d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape: (4, 2)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Shape: \" + str((sparkDF.count(), len(sparkDF.columns))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "86c10ce1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sparkShape(dataFrame):\n",
     "    return (dataFrame.count(), len(dataFrame.columns))"
@@ -540,25 +462,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b2ef8877",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyspark\n",
     "pyspark.sql.dataframe.DataFrame.shape = sparkShape"
@@ -566,32 +473,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e5b09ad0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4, 2)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sparkDF.shape())"
    ]
