--- a/notebooks/0302-spark-dataframe-read-and-write.ipynb
+++ b/notebooks/0302-spark-dataframe-read-and-write.ipynb
@@ -5,7 +5,7 @@
    "id": "4f707679",
    "metadata": {},
    "source": [
-    "# Spark DataFrame ReadWrite"
+    "# Spark DataFrame Read and Write"
    ]
   },
   {
