--- a/notebooks/0304-spark-dataframe-column.ipynb
+++ b/notebooks/0304-spark-dataframe-column.ipynb
@@ -642,7 +642,7 @@
    "id": "0af2dbea",
    "metadata": {},
    "source": [
-    "## Droping Column"
+    "## Dropping Column"
    ]
   },
   {
@@ -952,6 +952,26 @@
     ")\n",
     "\n",
     "df4.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "202a5874",
+   "metadata": {},
+   "source": [
+    "**Using `toDF()` to rename columns**\n",
+    "\n",
+    "It must specify all column names in a DataFrame, even if we only need to rename one column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66c3e24a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3.toDF(\"firstname\", \"middlename\", \"lastname\", \"age\", \"gender\", \"salary\").show()"
    ]
   }
  ],
