--- a/notebooks/pending-0102-python-workd-count.ipynb
+++ b/notebooks/pending-0102-python-workd-count.ipynb
@@ -14,6 +14,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e7d4c88d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "\n",
+    "mkdir -p data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d9beb366",
    "metadata": {},
    "outputs": [],
