--- a/notebooks/exercises/01-data-ingestion.ipynb
+++ b/notebooks/exercises/01-data-ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e8333a8",
+   "id": "43ff8aab",
    "metadata": {},
    "source": [
     "# Extract data from source to datalake"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa78188a",
+   "id": "e160bfd5",
    "metadata": {},
    "source": [
     "In this exercise, we will extract data from datasource, which is MySQL server database called `classicmodels`, and load the extracted into datalake. We will process those data later exercises.\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b42d77",
+   "id": "18e714b5",
    "metadata": {},
    "source": [
     "The extracted data should be located at `s3a://datalake/classicmodels/<table_name>.parquet`."
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cf0e14d",
+   "id": "842e67ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53b57ba0",
+   "id": "c0c383cc",
    "metadata": {},
    "source": [
     "## productlines table"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ba7f601",
+   "id": "8e420c46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a9264d4",
+   "id": "d09fdce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "737f093c",
+   "id": "1beec6da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d63f3b5c",
+   "id": "fc53738c",
    "metadata": {},
    "source": [
     "## products table"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9818b7e5",
+   "id": "2357ae5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6a6c9be",
+   "id": "267c9097",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deac4304",
+   "id": "943990bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d83a32e7",
+   "id": "45646b0c",
    "metadata": {},
    "source": [
     "## offices table"
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5674acc",
+   "id": "151a5f2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb3bf991",
+   "id": "6f45ca01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0680f5ff",
+   "id": "ad5860f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eabcc15d",
+   "id": "bce4627c",
    "metadata": {},
    "source": [
     "## employees table"
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5cc93ed",
+   "id": "0a1e76a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9314e2e4",
+   "id": "e69c3f71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e15dff5d",
+   "id": "cf1a608f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f0020bd",
+   "id": "7c3d07cc",
    "metadata": {},
    "source": [
     "## customers table"
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26c63694",
+   "id": "6dba800a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcb66217",
+   "id": "3419154f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "031222d4",
+   "id": "da11336e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5fc223e",
+   "id": "7907aef7",
    "metadata": {},
    "source": [
     "## payments table"
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8740375c",
+   "id": "4ed9bfc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c69792f0",
+   "id": "696c257e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,16 +270,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05242cda",
+   "id": "67ade0c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 273, \"Employees was not loaded complete\""
+    "assert row_count == 273, \"Payments was not loaded complete\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1cf8f61d",
+   "id": "1b211eea",
    "metadata": {},
    "source": [
     "## orders table"
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe8134f9",
+   "id": "f7484e17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7841e2f5",
+   "id": "f582d042",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,16 +308,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8525a2a",
+   "id": "99a6970b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 273, \"Employees was not loaded complete\""
+    "assert row_count == 273, \"Orders was not loaded complete\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22b32164",
+   "id": "fd7b0e0d",
    "metadata": {},
    "source": [
     "## orderdetails table"
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b12938",
+   "id": "0e9e0b6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcd93b06",
+   "id": "f2f8f7aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,11 +346,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e1e32ba",
+   "id": "c99b7c36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert row_count == 273, \"Employees was not loaded complete\""
+    "assert row_count == 273, \"Orderdetails was not loaded complete\""
    ]
   }
  ],
