--- a/notebooks/0201-spark-session.ipynb
+++ b/notebooks/0201-spark-session.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97d59ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "90043b7a",
    "metadata": {},
@@ -13,6 +23,7 @@
    "id": "7268e91c",
    "metadata": {},
    "source": [
+    "### WARNING: Below code cannot change SparkSession instance which has been already created.\n",
     "In this notebook environment, we cannot redefine `master` property because an instance of `SparkSession` was created already. However the examples of how to create a `SparkSession` instance are useful"
    ]
   },
