--- a/notebooks/0203-spark-rdd-transform.ipynb
+++ b/notebooks/0203-spark-rdd-transform.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "515de390",
+   "id": "87b2e635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
     "    for x in partition_data:\n",
     "        yield x**2\n",
     "        \n",
-    "rdd.mapPartitions(process_partitions).collect()"
+    "rdd.mapPartitions(cube).collect()"
    ]
   },
   {
@@ -229,7 +229,7 @@
    "outputs": [],
    "source": [
     "rdd_five_partitions = rdd.repartition(5)\n",
-    "rdd_five_partitions.mapPartitions(process_partitions).collect()"
+    "rdd_five_partitions.mapPartitions(cube).collect()"
    ]
   },
   {
