--- a/notebooks/0205-spark-rdd-word-count.ipynb
+++ b/notebooks/0205-spark-rdd-word-count.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce2ea0c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7263ae63",
    "metadata": {},
