--- a/notebooks/0301-spark-dataframe-intro.ipynb
+++ b/notebooks/0301-spark-dataframe-intro.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6988ee31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7e9cd4e7",
    "metadata": {},
