--- a/notebooks/0302-spark-dataframe-read-and-write.ipynb
+++ b/notebooks/0302-spark-dataframe-read-and-write.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "972c8acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4f707679",
    "metadata": {},
