--- a/notebooks/0305-spark-dataframe-filter.ipynb
+++ b/notebooks/0305-spark-dataframe-filter.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e9e33c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8d2b9953",
    "metadata": {},
@@ -242,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.filter(array_contains(df.language, \"Java\")).show()"
+    "df.filter(F.array_contains(df.languages, \"Java\")).show()"
    ]
   },
   {
