--- a/notebooks/0306-spark-dataframe-orderby-groupby.ipynb
+++ b/notebooks/0306-spark-dataframe-orderby-groupby.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ac0a4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3349ee4a",
    "metadata": {},
@@ -653,7 +663,7 @@
    "source": [
     "df.select(\n",
     "    F.sum(\"salary\"),\n",
-    "    F.sumDistinct(\"salary\"),\n",
+    "    F.sum_distinct(\"salary\"),\n",
     ").show(truncate=False)"
    ]
   }
