--- a/notebooks/0307-spark-dataframe-join.ipynb
+++ b/notebooks/0307-spark-dataframe-join.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54fba6d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2c0f576e",
    "metadata": {},
