--- a/notebooks/0308-spark-dataframe-udf.ipynb
+++ b/notebooks/0308-spark-dataframe-udf.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "961bff5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d151063a",
    "metadata": {},
