--- a/notebooks/0405-spark-sql-udf.ipynb
+++ b/notebooks/0405-spark-sql-udf.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b29f3847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8f1f79d0",
    "metadata": {},
