--- a/notebooks/0204-spark-rdd-action.ipynb
+++ b/notebooks/0204-spark-rdd-action.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00df43de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ad301a6b",
    "metadata": {},
